--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,23 +2,16 @@ version: '3.8'
 
 services:
   app:
-    build:
-      context: .
-      dockerfile: Dockerfile
-    image: laravel-app
-    container_name: laravel-app-container
+    build: .
+    container_name: laravel_app
     ports:
-      - "8000:80"
+      - "8080:80"
     volumes:
       - .:/var/www/html
     networks:
       - laravel_network
     environment:
-      - DB_CONNECTION=sqlite
-      - DB_DATABASE=/var/www/html/database/database.sqlite
-
-  # SQLite is embedded in the app, so no need for a separate container
-  # We can use a volume to persist SQLite data
+      - APACHE_DOCUMENT_ROOT=/var/www/html/public
 
 networks:
   laravel_network:
